fixing image filename (case sensitive)

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
 <div class="container-fluid">
 	<div class="column">
 		<h3>C++ Text-Based RPG</h3>
-		<img src="images/project1.png">
+		<img src="images/project1.PNG">
 	</div>
 	<div class="columnRight">
 		<h3>C++ Text-Based RPG</h3>
@@ -67,7 +67,7 @@
 <div class="container-fluid">
 	<div class="column">
 		<h3>DOM Grid</h3>
-		<img src="images/project2.png">
+		<img src="images/project2.PNG">
 	</div>
 	<div class="columnRight">
 		<h3>DOM Grid</h3>
